<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
>
    <TextView 
    android:id="@+id/about_app_name"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    />
    <TextView 
    android:id="@+id/about_version_lbl"
    android:layout_width="80dp" 
    android:layout_height="wrap_content"
    android:text="@string/version"    
    android:layout_below="@id/about_app_name"
    android:layout_toLeftOf="@+id/about_version"
    android:layout_alignParentLeft="true"
    />    
    <TextView 
    android:id="@+id/about_version"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:text="@string/app_version"
    android:layout_below="@id/about_app_name"    
    android:layout_alignParentRight="true" 
    />
    <TextView 
    android:id="@+id/about_author_lbl"
    android:layout_width="80dp" 
    android:layout_height="wrap_content"
    android:text="@string/author"
    android:layout_below="@id/about_version_lbl"
    android:layout_toLeftOf="@+id/about_version"
    android:layout_alignParentLeft="true"
    
    />        
    <TextView 
    android:id="@+id/about_author"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:text="@string/author_name"
    android:layout_below="@id/about_version"    
    android:layout_alignParentRight="true" 
    
    />    
    <TextView 
    android:id="@+id/about_description_lbl" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
     android:text="@string/description"
    android:layout_below="@id/about_author_lbl"
    android:layout_alignParentLeft="true"     
    />        
    <TextView 
    android:id="@+id/about_description" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:text="@string/app_description"
    android:layout_below="@id/about_description_lbl"
    android:layout_alignParentLeft="true"     
    
    />    
    
</RelativeLayout >
